part2/ex203/manifests/pong-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pong-app-http
  namespace: exercises 
spec:
  selector:
    matchLabels:
      app: pong-app-http
  template:
    metadata:
      labels:
        app: pong-app-http
    spec:
      containers:
      - name: pong-app-http
        image: deeq/pong-app-http:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8084
