part2/ex203/manifests/pong-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pong-app-http-service
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: pong-app-http
  ports:
  - port: 18084
    targetPort: 8084
