part2/ex203/manifests/uuid-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: uuid-app-http-service
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: uuid-app-http
  ports:
  - port: 18083
    protocol: TCP
    targetPort: 8083
